TP2/front/front-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deployment
  labels:
    app: front
spec:
  replicas: 3
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
      - name: front
        image: registry.master3.takima.io/guide/kubernetes-resources/front:latest
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: auth-master3-registry
