TP2/front/front-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
  name: front-ingress
spec:
  rules:
  - host: front.catherine-vanden-hende.takima.cloud
    http:
      paths:
      - backend:
          service:
            name: front-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - front.catherine-vanden-hende.takima.cloud
    secretName: app-wildcard-student
